[package]
name = "ont-haec-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "wfa2-sys"]

[profile.release]
lto = "thin"
panic = "abort"

[dependencies]
wfa2-sys = {path = "wfa2-sys"}
clap = {version = "~4.3.0", features = ["derive"]}
needletail = "~0.5.0"
lazy_static = "~1.4.0"
itertools = "~0.10.5"
rayon = "~1.7.0"
thread_local = "~1.1.4"
indicatif = {version = "~0.17.2", features = ["rayon"]}
ordered-float = "~3.7.0"
ndarray = "~0.15.6"
ndarray-npy = "~0.8.1"
tch = "0.13.0"
crossbeam-channel = "~0.5.8"
rustc-hash = "~1.1.0"

[dev-dependencies]
approx = "~0.5.1"
ndarray = {version = "~0.15.6", features = ["approx-0_5"]}