[package]
name = "ont-haec-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "wfa2-sys"]

[profile.release]
lto = "thin"
panic = "abort"

[dependencies]
wfa2-sys = {path = "wfa2-sys"}
clap = {version = "~4.4.2", features = ["derive"]}
needletail = "~0.5.0"
lazy_static = "~1.4.0"
itertools = "~0.11.0"
rayon = "~1.8.0"
thread_local = "~1.1.4"
indicatif = {version = "~0.17.2", features = ["rayon"]}
ordered-float = "~3.9.1"
ndarray = "~0.15.6"
ndarray-npy = "~0.8.1"
tch = "0.13.0"
crossbeam-channel = "~0.5.8"
rustc-hash = "~1.1.0"
regex = "~1.9.1"
glob = "~0.3.1"
zstd = "~0.12.4"

[dev-dependencies]
approx = "~0.5.1"
ndarray = {version = "~0.15.6", features = ["approx-0_5"]}