[package]
name = "herro"
version = "0.2.0"
authors = ["Dominik Stanojevic"]
edition = "2021"
description = "HERRO is a haplotype-aware, deep-learning tool for error correction of Nanopore ultralong (UL) reads."
readme = "README.md"
repository = "https://github.com/dominikstanojevic/herro.git"
license-file = "LICENSE.txt"
keywords = ["error-correction", "haplotype-aware", "bioinformatics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { version = "~4.4.2", features = ["derive"] }
needletail = "~0.5.0"
itertools = "~0.12.0"
indicatif = "~0.17.2"
ordered-float = "~4.2.0"
ndarray = "~0.15.6"
npyz = { version = "~0.8.1", features = ["derive"] }
tch = "0.13.0"
crossbeam-channel = "~0.5.8"
rustc-hash = "~1.1.0"
glob = "~0.3.1"
zstd = "~0.13.0"
jemallocator = "~0.5.4"

[dev-dependencies]
approx = "~0.5.1"
ndarray = { version = "~0.15.6", features = ["approx-0_5"] }
